--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "axios": "^1.6.7",
     "framer-motion": "^10.18.0",
+    "html2canvas": "^1.4.1",
+    "icons": "^1.0.0",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
